--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
--e git+https://github.com/NLeSC/sim-city-client.git@v0.3#egg=simcity-0.3
+-e git+https://github.com/NLeSC/sim-city-client.git@v0.3.3#egg=simcity-0.3.3
 bottle==0.12.8
-gevent==1.0.1
-CouchDB==1.0
--e git+https://github.com/blootsvoets/picasclient.git@v0.2#egg=picas-0.2
+gevent==1.0.2
+greenlet==0.4.7
+-e git+https://github.com/djc/couchdb-python.git#egg=CouchDB-1.0.1
+-e git+https://github.com/blootsvoets/picasclient.git@v0.2.3#egg=picas-0.2.3
