--- a/docker/webservice-base/Dockerfile
+++ b/docker/webservice-base/Dockerfile
@@ -10,7 +10,7 @@ RUN groupadd -r simcity && useradd -d /var/lib/simcity -g simcity simcity \
 
 USER simcity
 # Variable is a workaround to disable cache from this point forward
-RUN simcity_commit="a47ae52" \
+RUN simcity_commit="646f008914e5b3811e14751e698138bfaab8501e" \
   git clone https://github.com/NLeSC/sim-city-webservice.git \
             /var/lib/simcity/sim-city-webservice
 
@@ -19,7 +19,7 @@ WORKDIR /var/lib/simcity/sim-city-webservice
 RUN virtualenv env \
   && . env/bin/activate \
   && pip install -U pip \
-  && git checkout master \
+  && git checkout develop \
   && simcity_client_commit="d6aab4fced5072a69589a680d50095a7fc9dd051" \
      make install
 
