--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ gevent==1.0.2
 greenlet==0.4.7
 -e git+https://github.com/djc/couchdb-python.git#egg=CouchDB-1.0.1
 -e git+https://github.com/blootsvoets/picasclient.git@v0.2.4#egg=picas-0.2.4
-easywebdav
+easywebdav==1.2.0
