--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
--e git+https://github.com/NLeSC/sim-city-client.git@develop#egg=simcity-0.3.4
--e git+https://github.com/NLeSC/sim-city-explore.git@json-schema#egg=simcityexplore-0.0.1
 bottle==0.12.8
-gevent==1.0.2
-greenlet==0.4.7
--e git+https://github.com/djc/couchdb-python.git#egg=CouchDB-1.0.1
--e git+https://github.com/blootsvoets/picasclient.git@v0.2.4#egg=picas-0.2.4
+CouchDB==1.0.1
 easywebdav==1.2.0
+gevent==1.1.1
+greenlet==0.4.9
+JPype1==0.6.1
+pyxenon==0.2.1
+pystache==0.5.4
+requests==2.8.1
+-e git+https://github.com/indodutch/sim-city-client.git@develop#egg=simcity-0.3.4
+-e git+https://github.com/indodutch/sim-city-explore.git@json-schema#egg=simcityexplore-0.1
