--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ greenlet==0.4.9
 JPype1==0.6.1
 pyxenon==0.2.1
 pystache==0.5.4
-requests==2.8.1
--e git+https://github.com/indodutch/sim-city-client.git@develop#egg=simcity-0.3.4
+requests==2.10.0
+-e git+https://github.com/indodutch/sim-city-client.git@develop#egg=simcity-0.4[xenon]
+accept-types==0.3.0
