--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-bottle==0.12.8
-CouchDB==1.0.1
-easywebdav==1.2.0
-gevent==1.1.1
-greenlet==0.4.9
-JPype1==0.6.1
-pyxenon==0.2.2
-pystache==0.5.4
-requests==2.10.0
--e git+https://github.com/indodutch/sim-city-client.git@develop#egg=simcity-0.4[xenon]
 accept-types==0.3.0
+bottle==0.12.9
+CouchDB==1.1
+gevent==1.1.2
+greenlet==0.4.10
+ijson==2.3
+JPype1==0.6.1
+jsonschema==2.5.1
+pystache==0.5.4
+pyxenon==0.2.2
+requests==2.11.0
+-e git+https://github.com/indodutch/sim-city-client.git@develop#egg=simcity-0.4[xenon]
