--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,21 @@
 language: python
-python:
-    - "2.7"
-    - "3.3"
-    - "3.4"
-    - "3.5"
-install: "make install"
-script: "make fulltest"
+matrix:
+  fast_finish: true
+  # Only do docker integration tests with Python 3.5
+  include:
+    - python: "2.7"
+      env: TESTS="tests"
+    - python: "3.3"
+      env: TESTS="tests"
+    - python: "3.4"
+      env: TESTS="tests"
+    - python: "3.5"
+      env: TESTS="tests integration_tests"
+      sudo: true
+      services:
+        - docker
+install:
+  - pip install -U pip
+  - pip install -r requirements.txt -r test_requirements.txt .
+script:
+  - nosetests $TESTS
