Updated test setup

--- a/integration_tests/docker/docker-compose.yml
+++ b/integration_tests/docker/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '2'
 services:
   taskdb:
-    image: klaemo/couchdb
+    image: klaemo/couchdb:1.6.1
     ports:
       - "127.0.0.1:5784:5984"
     environment:
       COUCHDB_USER: simcityadmin
       COUCHDB_PASSWORD: simcity
   jobdb:
-    image: klaemo/couchdb
+    image: klaemo/couchdb:1.6.1
     ports:
       - "127.0.0.1:5884:5984"
     environment:
@@ -29,18 +29,12 @@ services:
       context: simcity-webdav
     ports:
       - "127.0.0.1:8080:80"
-  # Slurm stores accounting in MySQL
-  mysql:
-    image: mysql:5.5
-    environment:
-      - MYSQL_ROOT_PASSWORD=xenon-slurm-pw
   slurm:
     build:
       context: simcity-slurm
     ports:
       - "127.0.0.1:10022:22"
     links:
-      - mysql
       - jobdb
       - taskdb
       - webdav
