--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,14 @@
 language: python
-matrix:
-  fast_finish: true
-  # Only do docker integration tests with Python 3.5
-  include:
-    - python: "2.7"
-      env: TESTS="tests"
-    - python: "3.3"
-      env: TESTS="tests"
-    - python: "3.4"
-      env: TESTS="tests"
-    - python: "3.5"
-      env: TESTS="tests integration_tests"
-      sudo: true
-      services:
-        - docker
+python:
+  - "2.7"
+  - "3.3"
+  - "3.4"
+  - "3.5"
+sudo: true
+services:
+  - docker
 install:
   - pip install -U pip
-  - pip install -r requirements.txt -r test_requirements.txt .
+  - pip install -r requirements.txt .
 script:
-  - pytest $TESTS
+  - pytest --flake8 $TESTS
