--- a/integration_tests/docker/simcity-slurm/etc/slurm.conf
+++ b/integration_tests/docker/simcity-slurm/etc/slurm.conf
@@ -118,20 +118,20 @@ SelectType=select/linear
 #
 # LOGGING AND ACCOUNTING
 #AccountingStorageEnforce=0
-AccountingStorageHost=mysql
-AccountingStorageLoc=slurm_acct_db
-AccountingStoragePass=xenon-slurm-pw
+#AccountingStorageHost=mysql
+AccountingStorageLoc=/var/spool/slurmctld/accounting.txt
+#AccountingStoragePass=xenon-slurm-pw
 #AccountingStoragePort=
-AccountingStorageType=accounting_storage/mysql
-AccountingStorageUser=root
+AccountingStorageType=accounting_storage/filetxt
+#AccountingStorageUser=root
 AccountingStoreJobComment=YES
 ClusterName=cluster
 #DebugFlags=
-JobCompHost=mysql
-JobCompLoc=slurm_acct_db
-JobCompPass=xenon-slurm-pw
+#JobCompHost=mysql
+JobCompLoc=/var/spool/slurmctld/job_completions.txt
+#JobCompPass=xenon-slurm-pw
 #JobCompPort=
-JobCompType=jobcomp/mysql
+JobCompType=jobcomp/filetxt
 JobCompUser=root
 JobAcctGatherFrequency=2
 JobAcctGatherType=jobacct_gather/linux
