--- a/simulations/matsim.yaml
+++ b/simulations/matsim.yaml
@@ -2,7 +2,7 @@ latest: '0.6'
 stable: '0.5'
 '0.5': 
     command: ~/bangalore-matsim/matsim.sh
-    parallelism: '*'
+    parallelism: "*"
     resourceTypeUrl: /explore/resource/matsim
     form:
         - ensemble 
@@ -66,7 +66,7 @@ stable: '0.5'
             validationMessage: Please add exactly one (1) fire to the map
 '0.6': 
     command: ~/bangalore-matsim/matsim.sh
-    parallelism: '*'
+    parallelism: "*"
     resourceTypeUrl: /explore/resource/matsim
     form:
         - ensemble 
